Passing 12 tests now